support-bundle-2025-08-09T21_08_25/cluster-resources/network-policy/default.json
{
  "kind": "NetworkPolicyList",
  "apiVersion": "networking.k8s.io/v1",
  "metadata": {
    "resourceVersion": "8768"
  },
  "items": [
    {
      "kind": "NetworkPolicy",
      "apiVersion": "networking.k8s.io/v1",
      "metadata": {
        "name": "postgres-postgresql",
        "namespace": "default",
        "uid": "e2378c2e-a976-49fa-8d7b-e34aca54c0c9",
        "resourceVersion": "511",
        "generation": 1,
        "creationTimestamp": "2025-08-09T22:55:33Z",
        "labels": {
          "app.kubernetes.io/component": "primary",
          "app.kubernetes.io/instance": "postgres",
          "app.kubernetes.io/managed-by": "Helm",
          "app.kubernetes.io/name": "postgresql",
          "app.kubernetes.io/version": "17.5.0",
          "helm.sh/chart": "postgresql-16.7.24"
        },
        "annotations": {
          "meta.helm.sh/release-name": "postgres",
          "meta.helm.sh/release-namespace": "default"
        },
        "managedFields": [
          {
            "manager": "helm",
            "operation": "Update",
            "apiVersion": "networking.k8s.io/v1",
            "time": "2025-08-09T22:55:33Z",
            "fieldsType": "FieldsV1",
            "fieldsV1": {
              "f:metadata": {
                "f:annotations": {
                  ".": {},
                  "f:meta.helm.sh/release-name": {},
                  "f:meta.helm.sh/release-namespace": {}
                },
                "f:labels": {
                  ".": {},
                  "f:app.kubernetes.io/component": {},
                  "f:app.kubernetes.io/instance": {},
                  "f:app.kubernetes.io/managed-by": {},
                  "f:app.kubernetes.io/name": {},
                  "f:app.kubernetes.io/version": {},
                  "f:helm.sh/chart": {}
                }
              },
              "f:spec": {
                "f:egress": {},
                "f:ingress": {},
                "f:podSelector": {},
                "f:policyTypes": {}
              }
            }
          }
        ]
      },
      "spec": {
        "podSelector": {
          "matchLabels": {
            "app.kubernetes.io/component": "primary",
            "app.kubernetes.io/instance": "postgres",
            "app.kubernetes.io/name": "postgresql"
          }
        },
        "ingress": [
          {
            "ports": [
              {
                "protocol": "TCP",
                "port": 5432
              }
            ]
          }
        ],
        "egress": [
          {}
        ],
        "policyTypes": [
          "Ingress",
          "Egress"
        ]
      }
    },
    {
      "kind": "NetworkPolicy",
      "apiVersion": "networking.k8s.io/v1",
      "metadata": {
        "name": "redis",
        "namespace": "default",
        "uid": "23ec132e-7eee-4bae-8a8d-314412a04770",
        "resourceVersion": "613",
        "generation": 1,
        "creationTimestamp": "2025-08-09T22:55:57Z",
        "labels": {
          "app.kubernetes.io/instance": "redis",
          "app.kubernetes.io/managed-by": "Helm",
          "app.kubernetes.io/name": "redis",
          "app.kubernetes.io/version": "8.2.0",
          "helm.sh/chart": "redis-22.0.1"
        },
        "annotations": {
          "meta.helm.sh/release-name": "redis",
          "meta.helm.sh/release-namespace": "default"
        },
        "managedFields": [
          {
            "manager": "helm",
            "operation": "Update",
            "apiVersion": "networking.k8s.io/v1",
            "time": "2025-08-09T22:55:57Z",
            "fieldsType": "FieldsV1",
            "fieldsV1": {
              "f:metadata": {
                "f:annotations": {
                  ".": {},
                  "f:meta.helm.sh/release-name": {},
                  "f:meta.helm.sh/release-namespace": {}
                },
                "f:labels": {
                  ".": {},
                  "f:app.kubernetes.io/instance": {},
                  "f:app.kubernetes.io/managed-by": {},
                  "f:app.kubernetes.io/name": {},
                  "f:app.kubernetes.io/version": {},
                  "f:helm.sh/chart": {}
                }
              },
              "f:spec": {
                "f:egress": {},
                "f:ingress": {},
                "f:podSelector": {},
                "f:policyTypes": {}
              }
            }
          }
        ]
      },
      "spec": {
        "podSelector": {
          "matchLabels": {
            "app.kubernetes.io/instance": "redis",
            "app.kubernetes.io/name": "redis"
          }
        },
        "ingress": [
          {
            "ports": [
              {
                "protocol": "TCP",
                "port": 6379
              }
            ]
          }
        ],
        "egress": [
          {}
        ],
        "policyTypes": [
          "Ingress",
          "Egress"
        ]
      }
    }
  ]
}
